<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:subtitleTextColor="@color/white"
            app:navigationIcon="@drawable/toobar_back"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_35">

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:textColor="@color/alpha_80_black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_35">

            <EditText
                android:id="@+id/ed_passwoord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/alpha_80_black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/but_login"
            android:onClick="view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_20"
            android:text="@string/login_in"
            android:textColor="@color/alpha_80_black" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="@dimen/dp_10"
        android:onClick="view"
        android:text="QQ"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_wx"
        android:layout_width="18dp"
        android:layout_height="9dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="20dp"
        android:onClick="view"
        android:text="微信"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>